<resources>
    <string name="app_name">PersonalFinanceApp</string>
    <string name="navbar_home">Home</string>
    <string name="navbar_insights">Insights</string>
    <string name="navbar_transactions">Transactions</string>
    <string name="navbar_products">Products</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="select">Select item</string>

    <string name="largest_transaction_header">Largest Expense:</string>
    <string name="navbar_profile">Profile</string>
    <string name="view_all_btn">View All Transactions</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="link_bankacct">Link Bank Account</string>
    <string name="sendOTP">Send OTP</string>
    <string name="logout">Log Out</string>
    <string name="profile">Edit Profile</string>

    <string-array name="transaction_types_array">
        <item>Spending</item>
        <item>Income</item>
    </string-array>
    <string name="empty_transaction_message">No transactions found. Please add one, or sync with your bank account.</string>
    <string name="this_month">This Month</string>
    <string name="money_in">Income:</string>
    <string name="money_out">Expenses:</string>
    <string name="error_message">Error! Please restart the app.</string>
    <string name="last_month">Last Month</string>
    <string name="ocbc_auth_header">Bearer 686560f4-ce07-3cdf-a609-103ba0d261d7</string>
    <string name="spending_by_cat_defaultamt">$0.00</string>
    <string name="money_format">%,.2f</string>
    <string name="all_transactions_title">All Transactions</string>
    <string name="bank_statement_title">Bank Statements</string>
    <string name="set_budget_btn">Set Monthly Budget</string>
    <string name="monthly_budget">Monthly Budget</string>
    <string name="save_budget">Save</string>
    <string name="cancel_budget">Cancel</string>


    <string name="reset_password">Reset Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm">Confirm</string>

    <string name="loginEng">Login</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="login">Login</string>
    <string name="LoginWithFacebook">Login With Facebook</string>
    <string name="sign_up_here">Sign Up</string>
    <string name="Verfication_code">Verification OTP Code</string>
    <string name="please_type_verification_code">Please type the verification code send</string>
    <string name="to_phone_no">to shan@gmail.com</string>
    <string name="get_verify_code"><u>Request OTP Again</u></string>
    <string name="verify">Confirm</string>
    <string name="phone_number">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Sign Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="facebook_app_id">711073860425774</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">c429a87247f93a8ca1caa58631fd395d</string>
    <string name="remember_password">Remember Password</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="username_email">Name And Email</string>
    <string name="change_name">Change Name</string>
    <string name="link_bank_account">Link Bank Account</string>

    <string name="ask_question">Submit an Enquiry</string>

    <string name="type_hint">Enquiry Type</string>
    <string name="name">Your Full Name</string>
    <string name="email">Your Email</string>
    <string name="enquiries">Let us know about your enquiries</string>
    <string name="back">Back to previous page</string>
    <string-array name="type">
        <item>ACCOUNT</item>
        <item>PRODUCT</item>
        <item>FEEDBACK</item>
        <item>OTHER</item>
    </string-array>


    <string name="enquiry">Enquiry Form</string>
    <string name="submit">Submit</string>
    <string name="please_select_an_enquiry_type">Please select an enquiry type.</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="please_enter_the_details_of_your_enquiry">Please enter the details of your enquiry</string>
    <string name="get_spending_forecast">Get Spending Forecast</string>


    <string name="bank_account_number">Bank Account Number</string>
    <string name="please_enter_your_account_number">Please enter your account number</string>
    <string name="select_your_bank">Select your bank</string>
    <string name="this_month_spending_forecast">This Month\'s Spending Forecast</string>
    <string-array name="bank_list">
        <item>OCBC</item>
    </string-array>
</resources>