<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_item"
        android:title="@string/navbar_home"
        android:icon="@drawable/ic_home_foreground" />
    <item
        android:id="@+id/insights_item"
        android:title="@string/navbar_insights"
        android:icon="@drawable/ic_insights_foreground" />
    <item
        android:id="@+id/transactions_item"
        android:title="@string/navbar_transactions"
        android:icon="@drawable/ic_transactions_foreground" />
    <item
        android:id="@+id/products_item"
        android:title="@string/navbar_products"
        android:icon="@drawable/ic_products_foreground" />
    <item
        android:id="@+id/manage_profile"
        android:title="@string/navbar_profile"
        android:icon="@drawable/ic_baseline_tag_faces_24" />
</menu>