<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="20dp"
    >

    <ImageView
        android:id="@+id/img_icon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        />

    <TextView
        android:id="@+id/profile"
        android:text="@string/profile"
        android:textSize="20dp"
        android:layout_marginBottom="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="16dp"

            android:src="@drawable/ic_baseline_account_circle_24" />

        <TextView
            android:id="@+id/txtUsername"
            android:textSize="20dp"
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/email_display"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        android:layout_gravity="center"
        android:gravity="center"
        >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_baseline_email_24" />

        <TextView
            android:id="@+id/edtRegisterEmail"
            android:textSize="20dp"
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

<!--        <ImageView-->
<!--            android:layout_width="30dp"-->
<!--            android:layout_height="30dp"-->
<!--            android:layout_marginRight="16dp"-->
<!--            android:src="@drawable/ic_baseline_arrow_circle_right_24"-->
<!--            app:tint="@color/purple_500" />-->

    </LinearLayout>

    <LinearLayout
        android:id="@+id/change_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:gravity="center">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_baseline_lock_24" />

        <TextView
            android:text="@string/change_password"
            android:textSize="24dp"
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_baseline_arrow_circle_right_24"
            app:tint="@color/purple_500" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fill_enquiry"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:gravity="center">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_baseline_chat_24" />

        <TextView
            android:text="@string/ask_question"
            android:textSize="24dp"
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_baseline_arrow_circle_right_24"
            app:tint="@color/purple_500" />

    </LinearLayout>


    <TextView
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:text="@string/logout"
        android:textSize="20dp" />

</LinearLayout>